--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>English Articles Game</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div id="container">
+    <h1>🧩 English Articles Game</h1>
+    
+    <div id="login">
+      <input type="text" id="username" placeholder="Enter your name" />
+      <button id="start-btn">Start Game</button>
+    </div>
+
+    <div id="game" style="display:none;">
+      <h2 id="title"></h2>
+      <p id="text"></p>
+      <button id="submit-btn">Submit Answers</button>
+    </div>
+
+    <div id="results" style="display:none;">
+      <h2>Results</h2>
+      <p id="score"></p>
+      <button id="restart-btn">Play Again</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
