--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
     <div id="results" style="display:none;">
       <h2>Results</h2>
       <p id="score"></p>
+      <h3>Leaderboard</h3>
+      <ul id="leaderboard"></ul>
       <button id="restart-btn">Play Again</button>
     </div>
   </div>
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+  <script src="firebase.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
