--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <button id="start-btn">Start Game</button>
     </div>
 
+    <div id="waiting" style="display:none;">
+      <h2>Waiting for the teacher to start...</h2>
+      <p>Stay tuned! The game will start soon.</p>
+    </div>
+
     <div id="game" style="display:none;">
       <h2 id="title"></h2>
       <p id="text"></p>
