--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div id="game" style="display:none;">
       <h2 id="title"></h2>
+      <p id="timer" style="font-weight:bold; color:#d33;"></p>
       <p id="text"></p>
       <button id="submit-btn">Submit Answers</button>
     </div>
