--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="waiting" style="display:none;">
-      <h2>Waiting for the teacher to start...</h2>
+      <h2>Waiting for the admin to start...</h2>
       <p>Stay tuned! The game will start soon.</p>
     </div>
 
