--- a/Admin.html
+++ b/Admin.html
@@ -125,6 +125,8 @@
     // 🌍 GLOBAL LEADERBOARD (All rounds)
     // ====================================
 
+    let globalListener = null;
+
     function updateGlobalLeaderboard() {
     const globalEl = document.getElementById("global-leaderboard");
 
@@ -135,7 +137,7 @@
         return;
         }
 
-        const userStats = {}; // { username: { correct, total, rounds } }
+        const userStats = {}; // { username: { correct, total, rounds: Set() } }
 
         for (const key in results) {
         const r = results[key];
@@ -151,19 +153,22 @@
         userStats[r.username].rounds.add(r.roundId);
         }
 
+        // Convert to sortable array
         const table = Object.entries(userStats).map(([username, data]) => {
         const percentage = ((data.correct / data.total) * 100).toFixed(1);
         return {
             username,
             correct: data.correct,
             total: data.total,
-            percentage: percentage,
+            percentage,
             roundsPlayed: data.rounds.size
         };
         });
 
-        table.sort((a, b) => b.percentage - a.percentage || b.correct - a.correct);
+        // ✅ Sort by total correct (descending), then by percentage as tiebreaker
+        table.sort((a, b) => b.correct - a.correct || b.percentage - a.percentage);
 
+        // Render to UI
         globalEl.innerHTML = table
         .map(
             (u, i) => `
@@ -177,12 +182,25 @@
     });
     }
 
-    // Refresh global leaderboard when new round starts
+    // ✅ Listen for *any new result* in Firebase
+    function attachGlobalListener() {
+    if (globalListener) globalListener.off(); // prevent double listeners
+
+    globalListener = db.ref("results");
+    globalListener.on("child_added", () => updateGlobalLeaderboard());
+    globalListener.on("child_removed", () => updateGlobalLeaderboard());
+    }
+
+    // ✅ Update at new round start + live updates
     db.ref("currentRound").on("value", (snapshot) => {
     const data = snapshot.val();
-    if (data && data.id) {
-        updateGlobalLeaderboard();
-    }
+    if (data && data.id) updateGlobalLeaderboard();
+    });
+
+    // ✅ Initialize when page loads
+    loadTexts().then(() => {
+    updateGlobalLeaderboard();
+    attachGlobalListener();
     });
 
 
